--- a/app/src/main/res/layout/activity_pakge_info.xml
+++ b/app/src/main/res/layout/activity_pakge_info.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_blue"
+    android:background="#ffffffff"
     android:orientation="vertical" >
 
     <ScrollView
@@ -49,8 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
-                android:text="保存"
-                />
+                android:text="SAVE" />
 
         </RelativeLayout>
 
