--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,18 +6,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/background_green"
+    android:background="#ffffffff"
     tools:context="com.example.easyexpress.User">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:minWidth="230dp"
-        >
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +37,7 @@
             android:maxWidth="@dimen/user_avatar"
             android:minHeight="@dimen/user_avatar"
             android:minWidth="@dimen/user_avatar"
-            android:src="@drawable/ic_action_user"
+            android:src="@drawable/user_clients_01"
             android:layout_gravity="center"
             android:layout_marginBottom="50dp"/>
 
@@ -47,7 +49,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Phone No.:" />
+                android:text="Phone No.:"
+                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/user_phone"
@@ -63,7 +66,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password:" />
+                android:text="Password:"
+                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/user_pass"
@@ -84,7 +88,9 @@
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:background="@color/primary_green"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:textSize="20dp"
+                android:textColor="#ffffffff" />
 
             <Button
                 android:id="@+id/register_button"
@@ -92,7 +98,9 @@
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:background="@color/secondary_green"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:textColor="#ffffffff"
+                android:textSize="20dp" />
 
         </LinearLayout>
         <Button
@@ -100,7 +108,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/primary_green_alpha"
-            android:text="Offline Mode"/>
+            android:text="Offline Mode"
+            android:textSize="20dp"
+            android:textColor="#ffffffff" />
     </LinearLayout>
 
 </RelativeLayout>
