--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -6,18 +6,21 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:background="@color/background_green"
+                android:background="#ffffffff"
                 tools:context="com.example.easyexpress.User">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:minWidth="230dp"
-        >
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#ffffffff">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +36,7 @@
             android:maxWidth="@dimen/user_avatar"
             android:minHeight="@dimen/user_avatar"
             android:minWidth="@dimen/user_avatar"
-            android:src="@drawable/ic_action_user"
+            android:src="@drawable/user_clients_01"
             android:layout_gravity="center"
             android:layout_marginBottom="50dp"/>
 
@@ -45,7 +48,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name:" />
+                android:text="Name:"
+                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/user_name"
@@ -61,7 +65,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Phone:" />
+                android:text="Phone:"
+                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/user_phone"
@@ -75,7 +80,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password:" />
+                android:text="Password:"
+                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/user_pass"
@@ -96,15 +102,11 @@
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:background="@color/primary_green"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:textColor="#ffffffff"
+                android:textSize="20dp" />
 
-            <Button
-                android:id="@+id/clear_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="clear"
-                android:background="@color/secondary_green"
-                android:layout_weight="1"/>
+
 
         </LinearLayout>
     </LinearLayout>
