--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="User Info">
+        android:title="User Information">
         <CheckBoxPreference
             android:title="UserInfo Remember"
             android:defaultValue="false"
             android:key="prefUserInfoSave"
-            android:summary="remember user name and passWord?"
+            android:summary="Remember user name and passWord?"
             >
         </CheckBoxPreference>
     </PreferenceCategory>
@@ -14,7 +14,7 @@
         android:title="NetWork Setting">
         <EditTextPreference
             android:key="prefServerIP"
-            android:summary="set the default ServerIP"
+            android:summary="Set the default Server IP"
             android:title="ServerIP"/>
     </PreferenceCategory>
 </PreferenceScreen>
