--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,14 @@
     android:layout_height="fill_parent"
     tools:context=".MainActivity">
 
-
-    <ImageView
-        android:id="@+id/image_map"
+    <com.ee5415.malu.easyexpress.myapplication2.Activities.MyLocationMapView
+        android:id="@+id/bmapView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/map_image"/>
+        android:layout_alignParentBottom="true"
+        android:clickable="true" >
+    </com.ee5415.malu.easyexpress.myapplication2.Activities.MyLocationMapView>
+
 
     <include android:id="@+id/tool_bar"
         layout = "@layout/tool_bar"
