--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:background="#ffffffff"
+                android:background="@color/background_green"
                 tools:context="com.example.easyexpress.User">
 
 
@@ -20,7 +20,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#ffffffff">
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
